infra/base/jsreport/jsreport-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jsreport-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: jsreport.mn.lab.software.altkom.pl
    http:
      paths:
      - path: /
        backend:
          serviceName: jsreport
          servicePort: 80
